Transparent background & hide title

--- a/src/styles.css
+++ b/src/styles.css
@@ -91,7 +91,8 @@ button {
 @media (prefers-color-scheme: dark) {
   :root {
     color: #f6f6f6;
-    background-color: #2f2f2f;
+    /* background-color: #2f2f2f; */
+    background-color: rgba(0, 0, 0, 0);
   }
 
   a:hover {
