--- a/src/styles.css
+++ b/src/styles.css
@@ -108,3 +108,27 @@ button {
     background-color: #0f0f0f69;
   }
 }
+
+/* Title Bar for dragging */
+.titlebar {
+  /* height: 30px; */
+  /* background: #329ea3; */
+  user-select: none;
+  display: flex;
+  justify-content: flex-end;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+/* .titlebar-button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+}
+.titlebar-button:hover {
+  background: #5bbec3;
+} */
